Fix textbox distortion on large shapes
Also tame message previews, make them smaller but scrollable. What an
oversight!

--- a/Valour/Client/Components/Messages/MessageComponent.razor.css
+++ b/Valour/Client/Components/Messages/MessageComponent.razor.css
@@ -286,6 +286,11 @@
     cursor: pointer;
 }
 
+.preview-message .message {
+    max-height: 30vh;
+    overflow-y: scroll;
+}
+
 .reply .content-holder {
     padding-left: 4px;
 }
